minor spacing fixes + added border on active page

--- a/src/styles/components/header/header.module.scss
+++ b/src/styles/components/header/header.module.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Jost');
-@import url('https://fonts.googleapis.com/css?family=Be+Vietnam');
+@import url('https://fonts.googleapis.com/css?family=Jost:wght@200..900');
+@import url('https://fonts.googleapis.com/css?family=Be+Vietnam:wght@200..900');
 
 .header {
     display: flex;
@@ -13,6 +13,12 @@
 .title {
     display: flex;
     flex-direction: row;
+    column-gap: 11px;
+    margin-top: 0.5rem;
+
+    > *:first-child {
+        margin-left: 34px; 
+    }
 }
 
 .title_text {
@@ -21,7 +27,7 @@
         font-family: "Malayalam MN";
         font-size: 2.8125rem;
         font-style: normal;
-        font-weight: 550;
+        font-weight: 400;
         line-height: normal;
     }
 
@@ -39,7 +45,7 @@
     flex-direction: row;
     list-style: none;
     justify-content: space-evenly;
-    align-items: flex-end;
+    align-items: center;
     
     a {
         color: var(--Gold, #D79C1A);
@@ -50,6 +56,8 @@
         font-weight: 600;
         line-height: normal;
         text-decoration: none;
+        transition: border-bottom 0.3s ease;
+        padding: 10px 30px;
 
         &:hover {
             border-bottom: 2px solid var(--Gold, #D79C1A);
@@ -63,9 +71,11 @@
 
 
 .page_link.active {
-   
-    background-color: #FFFBF0;
-   
+    // change how the active link appears here!!
+    border-radius: 5px;
+    border: 2px solid #D79C1A;
+
+
     
 }
 
